# cloud-engineering-AWS

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  locustfile.py  openapi.json  pyproject.toml  pyproject_2.toml  requirements.txt  run.sh
.github/workflows/: build-test-publish.yaml
docker/: Dockerfile  Dockerfile.lambda  docker-compose.locust.yaml  docker-compose.yaml
notebooks/: hw__learn_s3_client.ipynb
scripts/: generate-openapi.py
src/aws_python/: __init__.py  aws_lambda_handler.py  errors.py  generate_files.py  main.py  route_handler.py  routes.py  schemas.py  settings.py
src/aws_python/files_api/: __init__.py
src/aws_python/monitoring/: logger.py
src/aws_python/s3/: delete_objects.py  read_objects.py  s3.py  write_objects.py
tests/: __init__.py  conftest.py  consts.py
tests/fixtures/: api_client.py  mocked_aws.py  mocked_openai.py
tests/mocks/: openai_fastapi_mock_app.py
tests/unit_tests/: test_main.py  test_routes_error_cases.py  test_routes_happy_path.py
tests/unit_tests/s3/: test_delete_objects.py  test_read_objects.py  test_write_objects.py
