[project]
name = "aws-python"
description = "My package description"
authors = [{ name = "<your name>", email = "some-email@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115.6",
    "langchain-core>=0.3.29",
    "langchain-openai>=0.2.14",
    "python-dotenv>=1.0.1",
]
classifiers = ["Programming Language :: Python :: 3"]
keywords = ["one", "two"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { file = "version.txt" }

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
aws_python = ["*.json"]

##############################
# --- Dependencies --- #
##############################

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
static-code-qa = [
    "pre-commit",
    "pylint",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "Flake8-pyproject",
    "radon",
]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
# Note: For dev dependencies, you'll need to install multiple groups
# uv sync --group test --group release --group static-code-qa --group dev

##############################
# --- Code Quality Tools --- #
##############################

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.flake8]
docstring-convention = "all"
ignore = ["D107", "D212", "E501", "W503", "W605", "D203", "D100", "D104", "D103"]
exclude = [".venv"]
max-line-length = 119
radon-max-cc = 10
