[project]
name = "aws-python"
description = "My package description"
authors = [{ name = "<your name>", email = "some-email@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "boto3>=1.36.2",
    "fastapi>=0.115.6",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
    "pydantic-settings>=2.7.1",
    "openai>=1.59.5",
]
classifiers = ["Programming Language :: Python :: 3"]
keywords = ["one", "two"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { file = "version.txt" }

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
aws_python = ["*.json"]

##############################
# --- Dependencies --- #
##############################

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "moto[s3,server]>=5.0.26",
]
qa = [
    "pre-commit",
]
dev = [
    "boto3-stubs[s3]>=1.36.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "rich>=13.9.4",
    "types-requests>=2.32.0.20241016",
]
aws-lambda = [
    "mangum>=0.19.0",
]
# Note: For dev dependencies, you'll need to install multiple groups
# uv sync --group test --group qa --group dev --group aws-lambda

##############################
# --- Code Quality Tools --- #
##############################

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.flake8]
docstring-convention = "google"
ignore = ["D107", "D212", "E501", "W503", "W605", "D203", "D100", "D104", "D103", "R701"]
exclude = [".venv"]
max-line-length = 119
radon-max-cc = 10

[tool.mypy]
disable_error_code = "import-untyped"
